# megrez

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  mainwindow.h
mtfsim/: fraunhofer.cpp  fraunhofer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathutils.cpp  mathutils.h  meson.build  xarrayqcp.cpp  xarrayqcp.h
mtfsim/qcustomplot/: qcustomplot.cpp
spherometer/: Untitled.ipynb  calc.py  pyproject.toml  record.py  spherometer.py
spherometer/.ipynb_checkpoints/: record-checkpoint.csv
