[build-system]
requires = ["setuptools", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "megrez"
dynamic = ["version", "readme"]
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "tomli",
    "tomli_w",
    "sympy",
    "pandas",
    "appdirs"
]

[tool.setuptools_scm]
write_to = "megrez/_version.py"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.ruff]
line-length = 100
